# chiplog

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SCOPE_STATEMENT.md  SIGNING.md  pyproject.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: README.md  conftest.py  run_hetzner.sh  test_concurrent_throughput.py  test_record_latency.py  test_sustained_throughput.py  test_verifier_throughput.py
examples/: README.md  audited_tool_example.py  claude_agent_sdk_example.py  claude_code_dogfood.sh  claude_code_settings.json  langgraph_example.py  openai_agents_example.py
src/agent_audit/: __init__.py  canonical.py  cli.py  emit.py  integrity.py  keys.py  manifest.py  normalize.py  redact.py  report.py  time.py  verify.py
src/agent_audit/adapters/: __init__.py  _claude_hooks.py  claude_agent_sdk.py  claude_code.py  langgraph.py  openai_agents.py
src/agent_audit/schema/: __init__.py  (+1 more)
src/chiplog/: __init__.py  canonical.py  cli.py  emit.py  integrity.py  manifest.py  normalize.py  redact.py  report.py  time.py  verify.py
tests/: test_adapters_no_laundering.py  test_canonical_jcs.py  test_claude_agent_sdk_adapter.py  test_claude_code_adapter.py  test_concurrency.py  test_construction_guard.py  test_control_flow_predicate_public.py  test_emit.py  test_integrity.py  test_langgraph_adapter.py  test_lifecycle_event.py  test_local_file_sink.py  test_manifest.py  test_manifest_journal.py  test_manifest_key_rotation.py  test_normalize.py  test_openai_agents_adapter.py  test_outcome_honesty_matrix.py  test_outcome_schema.py  test_policy_unobserved.py  test_recorder_no_silent_loss.py  test_redact.py  test_redaction_contract.py  test_redaction_type_coverage.py  test_report_claims_guard.py  test_schema_version_compat.py  test_sink_lock_scope_guard.py  test_ts_monotonic_representable.py  test_verify_and_cli.py  test_verify_authenticity.py  test_verify_tree.py  test_version_single_source.py
tests/fixtures/: v1_0_record.jsonl  v1_0_record.pub
(+10 files in other folders)
