[project]
name = "agent-audit"
version = "0.1.0"
description = "Cryptographically-linked records of AI agent tool calls. Forward-compatible foundation for SOC 2 / ISO 42001 / EU AI Act Article 12 evidence."
authors = [
    { name = "Nikolay Semernya", email = "nsemernia@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2",
    "anyio>=4",
    "click>=8.1",
    "cryptography>=42.0",
    "jsonpath-ng>=1.6",
    "pydantic>=2.6,<3",
    "rfc8785>=0.1.4",
    "uuid6>=2024.7",
]

[project.scripts]
agent-audit = "agent_audit.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "langchain>=1.0",
    "langgraph>=0.2,<2",
    "mcp>=1.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
