[project]
name = "chiplog"
version = "0.2.2"
description = "Cryptographically-linked records of AI agent tool calls. Forward-compatible foundation for SOC 2 / ISO 42001 / EU AI Act Article 12 evidence."
authors = [
    { name = "Nikolay Semernya", email = "nsemernia@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24",
    "anyio>=4.6",
    "click>=8.2",
    "cryptography>=45",
    "jsonpath-ng>=1.7",
    "pydantic>=2.10,<3",
    "rfc8785>=0.1.4",
]

[project.scripts]
chiplog = "chiplog.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "claude-agent-sdk>=0.2.107",
    "hypothesis>=6.130",
    "langchain>=1.3",
    "langgraph>=1.2",
    "mcp>=1.20",
    "mypy>=1.18",
    "openai-agents>=0.18",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-benchmark>=4.0",
    "ruff>=0.7",
]
